implementing localization + configuration

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,3 +1,15 @@
-element.login=Login
+loginForm.login=Login
+loginForm.btn.continue=Continue
+loginForm.btn.createAccount=Don't have an account? Create account
 loginForm.msg.loginError=Invalid username/password combination
 loginForm.msg.userIsBlocked=User is blocked!
+
+registrationForm.registration=Create Account
+registrationForm.email=Email Address
+registrationForm.confirmPassword=Confirm password
+registrationForm.btn.signIn=Already have an account? Sign in
+registrationForm.btn.create=Create account
+
+commonForm.username=Username
+commonForm.password=Password
+
