--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -1,1 +1,15 @@
-element.login=Логін
+#loginForm.login=Логін
+loginForm.btn.continue=Continue
+loginForm.btn.createAccount=Don't have an account? Create account
+#loginForm.msg.loginError=Неправильний логін/пароль
+#loginForm.msg.userIsBlocked=Користувач заблокований!
+
+registrationForm.registration=Create Account
+registrationForm.email=Email Address
+registrationForm.confirmPassword=Confirm password
+registrationForm.btn.signIn=Already have an account? Sign in
+registrationForm.btn.create=Create account
+
+
+commonForm.username=Username
+commonForm.password=Password
