--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -1,3 +1,4 @@
+#TODO: Translate to ukr
 #loginForm.login=Логін
 loginForm.btn.continue=Continue
 loginForm.btn.createAccount=Don't have an account? Create account
