--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -7,8 +7,12 @@ loginForm.msg.userIsBlocked=User is blocked!
 registrationForm.registration=Create Account
 registrationForm.email=Email Address
 registrationForm.confirmPassword=Confirm password
+registrationForm.phone=Phone number
+
 registrationForm.btn.signIn=Already have an account? Sign in
 registrationForm.btn.create=Create account
+
+
 
 commonForm.username=Username
 commonForm.password=Password
