added firstName and secondName inputs register form

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -8,6 +8,8 @@ registrationForm.registration=Create Account
 registrationForm.email=Email Address
 registrationForm.confirmPassword=Confirm password
 registrationForm.phone=Phone number
+registrationForm.firstName=First name
+registrationForm.secondName=Second name
 
 registrationForm.btn.signIn=Already have an account? Sign in
 registrationForm.btn.create=Create account
