added validation messages to registration form

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,6 +1,6 @@
 loginForm.login=Login
 loginForm.btn.continue=Continue
-loginForm.btn.createAccount=Don't have an account? Create account
+loginForm.btn.createAccount=Dont have an account? Create account
 loginForm.msg.loginError=Invalid username/password combination
 loginForm.msg.userIsBlocked=User is blocked!
 
@@ -13,6 +13,14 @@ registrationForm.secondName=Second name
 
 registrationForm.btn.signIn=Already have an account? Sign in
 registrationForm.btn.create=Create account
+
+registrationForm.login.error_msg=Username must contain from 3 to 30 chars (latin letters, digits or underscore)
+registrationForm.email.error_msg=Invalid email format
+registrationForm.phone.error_msg=Phone number should contain 12 digits
+registrationForm.password_validation.error_msg=Password must be from 6 to 30 chars long at least one letter and number
+registrationForm.passwords_match.error_msg=Passwords doesn't match!
+registrationForm.invalid_first_name.error_msg=First name must contain from 1 to 30 latin letters or special symbols like ,.'-
+registrationForm.invalid_second_name.error_msg=Second name must contain from 1 to 30 latin letters or special symbols like ,.'-
 
 
 
