refactored change language form

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -22,3 +22,7 @@ registrationForm.phone_already_exists=User with such phone number already exists
 commonForm.username=Username
 commonForm.password=Password
 
+
+header.user.order=My orders
+header.language.en=EN
+header.language.ua=UA
