added localization to index page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -24,5 +24,10 @@ commonForm.password=Password
 
 
 header.user.order=My orders
+header.common.authors=Authors
+header.common.books=Books
+header.common.home=Home
+
+
 header.language.en=EN
 header.language.ua=UA
