--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -27,7 +27,17 @@ header.user.order=My orders
 header.common.authors=Authors
 header.common.books=Books
 header.common.home=Home
+header.common.search=Search..
+header.common.profile=My profile
+header.common.login=Log in
+header.common.logout=Log out
+
+
+header.admin.librarians=Librarians
+header.admin.users=Users
 
 
 header.language.en=EN
 header.language.ua=UA
+
+footer.common.about=About
