--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -1,4 +1,4 @@
-#TODO: Translate to ukr
+#TODO: Translate to ukr commented strings are already translated
 #loginForm.login=Логін
 loginForm.btn.continue=Continue
 loginForm.btn.createAccount=Don't have an account? Create account
@@ -8,9 +8,27 @@ loginForm.btn.createAccount=Don't have an account? Create account
 registrationForm.registration=Create Account
 registrationForm.email=Email Address
 registrationForm.confirmPassword=Confirm password
+registrationForm.phone=Phone number
+registrationForm.firstName=First name
+registrationForm.secondName=Second name
+
 registrationForm.btn.signIn=Already have an account? Sign in
 registrationForm.btn.create=Create account
+
+registrationForm.login_already_exists=User with such login already exists
+registrationForm.email_already_exists=User with such email already exists
+registrationForm.phone_already_exists=User with such phone number already exists
 
 
 commonForm.username=Username
 commonForm.password=Password
+
+
+header.user.order=My orders
+header.common.authors=Authors
+header.common.books=Books
+header.common.home=Home
+
+
+header.language.en=EN
+header.language.ua=UA
