implemented header response to different users

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -23,9 +23,10 @@ commonForm.username=Username
 commonForm.password=Password
 
 
-header.user.order=My orders
+
 header.common.authors=Authors
 header.common.books=Books
+
 header.common.home=Home
 header.common.search=Search..
 header.common.profile=My profile
@@ -33,9 +34,11 @@ header.common.login=Log in
 header.common.logout=Log out
 
 
+header.user.order=My orders
+
 header.admin.librarians=Librarians
 header.admin.users=Users
-
+header.admin.orders=User's orders
 
 header.language.en=EN
 header.language.ua=UA
