added ukrainian translations to locale_ua.properties

--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -1,34 +1,46 @@
 #TODO: Translate to ukr commented strings are already translated
-#loginForm.login=Логін
-loginForm.btn.continue=Continue
-loginForm.btn.createAccount=Don't have an account? Create account
-#loginForm.msg.loginError=Неправильний логін/пароль
-#loginForm.msg.userIsBlocked=Користувач заблокований!
-
-registrationForm.registration=Create Account
-registrationForm.email=Email Address
-registrationForm.confirmPassword=Confirm password
-registrationForm.phone=Phone number
-registrationForm.firstName=First name
-registrationForm.secondName=Second name
-
-registrationForm.btn.signIn=Already have an account? Sign in
-registrationForm.btn.create=Create account
-
-registrationForm.login_already_exists=User with such login already exists
-registrationForm.email_already_exists=User with such email already exists
-registrationForm.phone_already_exists=User with such phone number already exists
+loginForm.login=Логін
+loginForm.btn.continue=Продовжити
+loginForm.btn.createAccount=Ще не має аккаунту? Створити аккаунт
+loginForm.msg.loginError=Неправильний логін/пароль
+loginForm.msg.userIsBlocked=Користувач заблокований!
 
 
-commonForm.username=Username
-commonForm.password=Password
+registrationForm.registration=Створити Аккаунт
+registrationForm.email=Електронна пошта
+registrationForm.confirmPassword=Підтвердіть пароль
+registrationForm.phone=Номер телефону
+registrationForm.firstName=Ім'я
+registrationForm.secondName=Прізвище
+
+registrationForm.btn.signIn=Вже маєте аккаунт? Авторизуйтесь
+registrationForm.btn.create=Створити аккунт
+
+registrationForm.login_already_exists=Користувач з таким логіном вже існує
+registrationForm.email_already_exists=Користувач з такою електронною адресою вже існує
+registrationForm.phone_already_exists=Користувач з таким номером телефона вже існує
 
 
-header.user.order=My orders
-header.common.authors=Authors
-header.common.books=Books
-header.common.home=Home
+commonForm.username=Логін
+commonForm.password=Пароль
+
+header.common.authors=Автори
+header.common.books=Книги
+
+header.common.home=Головна
+header.common.search=Пошук..
+header.common.profile=Мій профіль
+header.common.login=Увійти
+header.common.logout=Вийти
 
 
-header.language.en=EN
-header.language.ua=UA
+header.user.order=Мої замовлення
+
+header.admin.librarians=Бібліотекарі
+header.admin.users=Користувачі
+header.admin.orders=Замовлення користувачів
+
+header.language.en=Анг
+header.language.ua=Укр
+
+footer.common.about=Про нас
