--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -44,3 +44,18 @@ header.language.en=EN
 header.language.ua=UA
 
 footer.common.about=About
+
+books.common.label.counter=№
+books.common.label.book_title=Title
+books.common.label.genre=Genre
+books.common.label.author=Author
+books.common.label.publisher=Publisher
+books.common.label.pages=Page Number
+books.common.label.publication_date=Publication Date
+books.common.label.available=Available
+
+
+
+
+books.common.available = Available
+books.common.unavailable = Unavailable
