--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -52,7 +52,7 @@ books.common.label.author=Author
 books.common.label.publisher=Publisher
 books.common.label.pages=Page Number
 books.common.label.publication_date=Publication Date
-books.common.label.available=Available
+books.common.label.available=Available Copies
 
 
 
