added admin menu books page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -54,6 +54,10 @@ books.common.label.pages=Page Number
 books.common.label.publication_date=Publication Date
 books.common.label.available=Available Copies
 
+books.admin.label.removed=Removed
+books.admin.msg.removed=Removed
+books.admin.msg.present=Present
+
 
 
 
