added remove and restore features added to books.jsp

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -58,6 +58,9 @@ books.admin.label.removed=Removed
 books.admin.msg.removed=Removed
 books.admin.msg.present=Present
 
+books.admin.action.remove=REMOVE
+books.admin.action.restore=RESTORE
+
 
 
 
