added locale to 404 page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -61,7 +61,9 @@ books.admin.msg.present=Present
 books.admin.action.remove=REMOVE
 books.admin.action.restore=RESTORE
 
-
+error.common.not.authorized.title=You are not authorized.
+error.common.not.authorized.description=You tried to access a page you did not have prior authorization for.
+error.common.wrong.page=Oops, something went wrong... Looks like this page doesn't exist
 
 
 books.common.available = Available
