--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -55,6 +55,8 @@ books.common.label.publication_date=Publication Date
 books.common.label.available=Copies
 
 books.admin.label.removed=Removed
+books.admin.action.update=Update
+
 books.admin.msg.removed=Removed
 books.admin.msg.present=Present
 
