added localization to edit book page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -63,10 +63,30 @@ books.admin.msg.present=Present
 books.admin.action.remove=REMOVE
 books.admin.action.restore=RESTORE
 
+admin.books.edit.form.label.book.title=book title
+admin.books.edit.form.label.author.first.name=AUTHOR'S FIRST NAME
+admin.books.edit.form.label.author.second.name=AUTHOR'S SECOND NAME
+admin.books.edit.form.label.select.genre=SELECT GENRE
+admin.books.edit.form.label.select.publisher=SELECT PUBLISHER
+admin.books.edit.form.label.copies=COPIES
+admin.books.edit.form.label.pages=PAGE NUMBER
+admin.books.edit.form.label.publication.date=PUBLICATION DATE
+admin.books.edit.form.label.submit.btn=SUBMIT
+
+
+admin.books.edit.form.placeholder.title=The Great Gatsby e.g.
+admin.books.edit.form.placeholder.first.name=John
+admin.books.edit.form.placeholder.second.name=Smith
+
+
+admin.books.edit.form.validation.msg.title=Title should contain at least one char, but no more than 350 letters, digits or special symbols like '!,.
+admin.books.edit.form.validation.msg.name=Name should contain no more than 50 letters or special symbols like '
+
 error.common.not.authorized.title=You are not authorized.
 error.common.not.authorized.description=You tried to access a page you did not have prior authorization for.
 error.common.wrong.page=Oops, something went wrong... Looks like this page doesn't exist
 
-
-books.common.available = Available
 books.common.unavailable = Unavailable
+
+
+
