implemented genres and publisher options

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -63,6 +63,8 @@ books.admin.msg.present=Present
 books.admin.action.remove=REMOVE
 books.admin.action.restore=RESTORE
 
+admin.books.edit.form.title=Update Book
+
 admin.books.edit.form.label.book.title=book title
 admin.books.edit.form.label.author.first.name=AUTHOR'S FIRST NAME
 admin.books.edit.form.label.author.second.name=AUTHOR'S SECOND NAME
