--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -50,7 +50,7 @@ books.common.label.book_title=Назва
 books.common.label.genre=Жанр
 books.common.label.author=Автор
 books.common.label.publisher=Видавництво
-books.common.label.pages=Номер сторінки
+books.common.label.pages=Кількість сторінок
 books.common.label.publication_date=Дата видавництва
 books.common.label.available=Кількість
 
@@ -65,11 +65,11 @@ books.admin.action.restore=ВІДНОВИТИ
 
 admin.books.edit.form.label.book.title=назва книги
 admin.books.edit.form.label.author.first.name=ІМ'Я АВТОРА
-admin.books.edit.form.label.author.second.name=ПРИЗВІЩЕ АВТОРА
+admin.books.edit.form.label.author.second.name=ПРІЗВИЩЕ АВТОРА
 admin.books.edit.form.label.select.genre=ОБЕРІТЬ ЖАНР
 admin.books.edit.form.label.select.publisher=ОБЕРІТЬ ВИДАВНИЦТВО
 admin.books.edit.form.label.copies=КІЛЬКІСТЬ
-admin.books.edit.form.label.pages=НОМЕР СТОРІНКИ
+admin.books.edit.form.label.pages=КІЛЬКІСТЬ СТОРІНОК
 admin.books.edit.form.label.publication.date=ДАТА ПУБЛІКАЦІЇ
 admin.books.edit.form.label.submit.btn=ВІДПРАВИТИ
 
@@ -77,6 +77,7 @@ admin.books.edit.form.label.submit.btn=ВІДПРАВИТИ
 admin.books.edit.form.placeholder.title=Наприклад Кобзар
 admin.books.edit.form.placeholder.first.name=Тарас
 admin.books.edit.form.placeholder.second.name=Шевченко
+admin.books.edit.form.title=Оновити книгу
 
 
 admin.books.edit.form.validation.msg.title=Назва повинна містити від одного до 350 літер, цифр або спеціальних символів '!,.
