implemented error message save to session

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -65,6 +65,10 @@ books.admin.action.restore=RESTORE
 
 admin.books.edit.form.title=Update Book
 
+
+admin.books.edit.error.msg.invalid.data=Invalid book data!
+admin.books.edit.error.msg.already.exists=Book with such data already exists!
+
 admin.books.edit.form.label.book.title=book title
 admin.books.edit.form.label.author.first.name=AUTHOR'S FIRST NAME
 admin.books.edit.form.label.author.second.name=AUTHOR'S SECOND NAME
