--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -63,6 +63,9 @@ books.admin.msg.present=Наявна
 books.admin.action.remove=ВИДАЛИТИ
 books.admin.action.restore=ВІДНОВИТИ
 
+admin.books.edit.error.msg.invalid.data=Некоректні данні!
+admin.books.edit.error.msg.already.exists=Книга з такими параметрами вже існує!
+
 admin.books.edit.form.label.book.title=назва книги
 admin.books.edit.form.label.author.first.name=ІМ'Я АВТОРА
 admin.books.edit.form.label.author.second.name=ПРІЗВИЩЕ АВТОРА
