implemented error messages  for book update

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -68,6 +68,7 @@ admin.books.edit.form.title=Update Book
 
 admin.books.edit.error.msg.invalid.data=Invalid book data!
 admin.books.edit.error.msg.already.exists=Book with such data already exists!
+admin.books.edit.success.msg.updated=Book successfully updated!
 
 admin.books.edit.form.label.book.title=book title
 admin.books.edit.form.label.author.first.name=AUTHOR'S FIRST NAME
