--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -65,6 +65,7 @@ books.admin.action.restore=ВІДНОВИТИ
 
 admin.books.edit.error.msg.invalid.data=Некоректні данні!
 admin.books.edit.error.msg.already.exists=Книга з такими параметрами вже існує!
+admin.books.edit.success.msg.updated=Книга успішно оновлена!
 
 admin.books.edit.form.label.book.title=назва книги
 admin.books.edit.form.label.author.first.name=ІМ'Я АВТОРА
