fixed bugs in UpdateBookCommand

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -63,7 +63,8 @@ books.admin.msg.present=Present
 books.admin.action.remove=REMOVE
 books.admin.action.restore=RESTORE
 
-admin.books.edit.form.title=Update Book
+admin.books.edit.form.title.update=Update Book
+admin.books.edit.form.title.add=Add Book
 
 
 admin.books.edit.error.msg.invalid.data=Invalid book data!
