--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -81,8 +81,9 @@ admin.books.edit.form.label.submit.btn=ВІДПРАВИТИ
 admin.books.edit.form.placeholder.title=Наприклад Кобзар
 admin.books.edit.form.placeholder.first.name=Тарас
 admin.books.edit.form.placeholder.second.name=Шевченко
-admin.books.edit.form.title=Оновити книгу
 
+admin.books.edit.form.title.update=Оновити Книгу
+admin.books.edit.form.title.add=Додати Книгу
 
 admin.books.edit.form.validation.msg.title=Назва повинна містити від одного до 350 літер, цифр або спеціальних символів '!,.
 admin.books.edit.form.validation.msg.name=Ім'я повинно міститти не більше 50 літер або символів '
