--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -78,7 +78,7 @@ admin.books.edit.form.label.publication.date=ДАТА ПУБЛІКАЦІЇ
 admin.books.edit.form.label.submit.btn=ВІДПРАВИТИ
 
 
-admin.books.edit.form.placeholder.title=Наприклад Кобзар
+admin.books.edit.form.placeholder.title=Кобзар
 admin.books.edit.form.placeholder.first.name=Тарас
 admin.books.edit.form.placeholder.second.name=Шевченко
 
