--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -70,6 +70,8 @@ admin.books.edit.form.title.add=Add Book
 admin.books.edit.error.msg.invalid.data=Invalid book data!
 admin.books.edit.error.msg.already.exists=Book with such data already exists!
 admin.books.edit.success.msg.updated=Book successfully updated!
+admin.books.edit.success.msg.added=Book successfully added!
+
 
 admin.books.edit.form.label.book.title=book title
 admin.books.edit.form.label.author.first.name=AUTHOR'S FIRST NAME
