added order_book.jsp and OrderBookRedirect

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -63,6 +63,7 @@ books.admin.msg.present=Present
 books.admin.action.remove=REMOVE
 books.admin.action.restore=RESTORE
 
+
 admin.books.edit.form.title.update=Update Book
 admin.books.edit.form.title.add=Add Book
 
@@ -97,6 +98,9 @@ error.common.not.authorized.description=You tried to access a page you did not h
 error.common.wrong.page=Oops, something went wrong... Looks like this page doesn't exist
 
 books.common.unavailable = Unavailable
+
+
+user.books.action.order.book=ORDER
 
 
 
