added order button to user

--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -95,3 +95,6 @@ error.common.wrong.page=Ой, щось пішло не так.. Схоже, що
 
 books.common.unavailable = Недоступна
 
+
+user.books.action.order.book=ЗАМОВИТИ
+user.books.label.order.book=Замовити
