fixed bugs in order_book.jsp

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -103,5 +103,11 @@ books.common.unavailable = Unavailable
 user.books.action.order.book=ORDER
 user.books.label.order.book=Order
 
+user.books.label.title=Order Book
 
+user.books.label.author=Author
+user.books.label.genre=Genre
+user.books.label.page.number=Page number
+user.books.label.publisher=Publisher
+user.books.label.publication.date=Publication date
 
