--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -95,6 +95,12 @@ error.common.wrong.page=Ой, щось пішло не так.. Схоже, що
 
 books.common.unavailable = Недоступна
 
-
+user.books.label.title=Замовити Книгу
 user.books.action.order.book=ЗАМОВИТИ
 user.books.label.order.book=Замовити
+
+user.books.label.author=Автор
+user.books.label.genre=Жанр
+user.books.label.page.number=Кількість сторінок
+user.books.label.publisher=Видавництво
+user.books.label.publication.date=Дата видавництва
