added order button to books_list

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -45,6 +45,8 @@ header.language.ua=UA
 
 footer.common.about=About
 
+
+books.common.label.books.list=Books List
 books.common.label.counter=№
 books.common.label.book_title=Title
 books.common.label.genre=Genre
