added display_orders.jsp page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -47,7 +47,7 @@ footer.common.about=About
 
 
 books.common.label.books.list=Books List
-books.common.label.counter=№
+common.label.counter=№
 books.common.label.book_title=Title
 books.common.label.genre=Genre
 books.common.label.author=Author
@@ -95,6 +95,10 @@ admin.books.edit.form.placeholder.second.name=Smith
 admin.books.edit.form.validation.msg.title=Title should contain at least one char, but no more than 350 letters, digits or special symbols like '!,.
 admin.books.edit.form.validation.msg.name=Name should contain no more than 50 letters or special symbols like '
 
+
+#TODO: add to ua
+admin.orders.orders.title=User Orders
+
 error.common.not.authorized.title=You are not authorized.
 error.common.not.authorized.description=You tried to access a page you did not have prior authorization for.
 error.common.wrong.page=Oops, something went wrong... Looks like this page doesn't exist
@@ -113,3 +117,12 @@ user.books.label.page.number=Page number
 user.books.label.publisher=Publisher
 user.books.label.publication.date=Publication date
 
+#TODO: add to ua
+user.orders.orders.title=My Orders
+
+orders.common.order.id=Order Id
+orders.common.user.id=User Id
+orders.common.order.start.date=Start date
+orders.common.order.end.date=End date
+orders.common.returned=Returned
+orders.common.book.title=Book Title
