--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -45,7 +45,7 @@ header.language.ua=Укр
 footer.common.about=Про нас
 
 books.common.label.books.list=Список книг
-books.common.label.counter=№
+common.label.counter=№
 books.common.label.book_title=Назва
 books.common.label.genre=Жанр
 books.common.label.author=Автор
