refactored display_orders.jsp page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -122,7 +122,12 @@ user.orders.orders.title=My Orders
 
 orders.common.order.id=Order Id
 orders.common.user.id=User Id
+orders.common.user.name=User name
+
 orders.common.order.start.date=Start date
 orders.common.order.end.date=End date
 orders.common.returned=Returned
 orders.common.book.title=Book Title
+
+orders.common.fine=Fine
+orders.common.order.place=Order Place
