--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -104,3 +104,18 @@ user.books.label.genre=Жанр
 user.books.label.page.number=Кількість сторінок
 user.books.label.publisher=Видавництво
 user.books.label.publication.date=Дата видавництва
+
+
+user.orders.orders.title=Мої замовлення
+
+orders.common.order.id=ID Замовлення
+orders.common.user.id=ID Користувача
+orders.common.user.name=Ім'я Користувача
+
+orders.common.order.start.date=Дата початку
+orders.common.order.end.date=Дата завершення
+orders.common.returned=Повернено
+orders.common.book.title=Назва книги
+
+orders.common.fine=Штраф
+orders.common.order.place=Місце замовлення
