added fine to orders in display_orders.jsp

--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -119,3 +119,8 @@ orders.common.book.title=Назва книги
 
 orders.common.fine=Штраф
 orders.common.order.place=Місце замовлення
+
+orders.common.order.subscription=На підписку
+orders.common.order.in.reading.hall=До читального залу
+
+orders.common.not.returned=Не Повернено
