--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -131,3 +131,9 @@ orders.common.book.title=Book Title
 
 orders.common.fine=Fine
 orders.common.order.place=Order Place
+
+orders.common.order.subscription=On Subscription
+orders.common.order.in.reading.hall=To the reading room
+
+orders.common.not.returned=Not Returned
+
