fixed bugs in display_orders.jsp

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -126,7 +126,7 @@ orders.common.user.name=User name
 
 orders.common.order.start.date=Start date
 orders.common.order.end.date=End date
-orders.common.returned=Returned
+orders.common.returned=Return Date
 orders.common.book.title=Book Title
 
 orders.common.fine=Fine
@@ -135,5 +135,5 @@ orders.common.order.place=Order Place
 orders.common.order.subscription=On Subscription
 orders.common.order.in.reading.hall=To the reading room
 
-orders.common.not.returned=Not Returned
+orders.common.not.returned=Not returned
 
