--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -114,7 +114,7 @@ orders.common.user.name=Ім'я Користувача
 
 orders.common.order.start.date=Дата початку
 orders.common.order.end.date=Дата завершення
-orders.common.returned=Повернено
+orders.common.returned=Дата повернення
 orders.common.book.title=Назва книги
 
 orders.common.fine=Штраф
@@ -123,4 +123,4 @@ orders.common.order.place=Місце замовлення
 orders.common.order.subscription=На підписку
 orders.common.order.in.reading.hall=До читального залу
 
-orders.common.not.returned=Не Повернено
+orders.common.not.returned=Не повернено
