added success msg after book ordered

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -119,6 +119,7 @@ user.books.label.publication.date=Publication date
 
 #TODO: add to ua
 user.orders.orders.title=My Orders
+user.orders.success.msg=Ordered Successfully!
 
 orders.common.order.id=Order Id
 orders.common.user.id=User Id
@@ -136,4 +137,6 @@ orders.common.order.subscription=On Subscription
 orders.common.order.in.reading.hall=To the reading room
 
 orders.common.not.returned=Not returned
+
+
 
