--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -107,6 +107,7 @@ user.books.label.publication.date=Дата видавництва
 
 
 user.orders.orders.title=Мої замовлення
+user.orders.success.msg=Успішно замовлено!
 
 orders.common.order.id=ID Замовлення
 orders.common.user.id=ID Користувача
