--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -138,5 +138,9 @@ orders.common.order.in.reading.hall=To the reading room
 
 orders.common.not.returned=Not returned
 
+librarian.orders.return=RETURN BOOK
+librarian.orders.already.returned=RETURNED
+
+
 
 
