--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -125,3 +125,6 @@ orders.common.order.subscription=На підписку
 orders.common.order.in.reading.hall=До читального залу
 
 orders.common.not.returned=Не повернено
+
+librarian.orders.return=ПОВЕРНУТИ КНИГУ
+librarian.orders.already.returned=ПОВЕРНЕНО
