--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -128,3 +128,5 @@ orders.common.not.returned=Не повернено
 
 librarian.orders.return=ПОВЕРНУТИ КНИГУ
 librarian.orders.already.returned=ПОВЕРНЕНО
+
+librarian.orders.already.status=Змінити Статус
