--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -137,6 +137,7 @@ orders.common.order.subscription=On Subscription
 orders.common.order.in.reading.hall=To the reading room
 
 orders.common.not.returned=Not returned
+orders.common.returned.overdue=Overdue
 
 librarian.orders.return=RETURN BOOK
 librarian.orders.already.returned=RETURNED
