fixed bugs in login/registration PRG pattern

--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -12,6 +12,7 @@ registrationForm.confirmPassword=Підтвердіть пароль
 registrationForm.phone=Номер телефону
 registrationForm.firstName=Ім'я
 registrationForm.secondName=Прізвище
+registrationForm.msg.success=Успішно зараєстровано!
 
 registrationForm.btn.signIn=Вже маєте аккаунт? Авторизуйтесь
 registrationForm.btn.create=Створити аккунт
