--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -10,6 +10,7 @@ registrationForm.confirmPassword=Confirm password
 registrationForm.phone=Phone number
 registrationForm.firstName=First name
 registrationForm.secondName=Second name
+registrationForm.msg.success=Registered successfully!
 
 registrationForm.btn.signIn=Already have an account? Sign in
 registrationForm.btn.create=Create account
