--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -146,5 +146,15 @@ librarian.orders.already.returned=RETURNED
 librarian.orders.already.status=Change Status
 
 
+admin.users.user.id=User Id
+admin.users.user.login=Login
+admin.users.user.first_name=First name
+admin.users.user.second_name=Second name
+admin.users.user.email=Email
+admin.users.user.phone=Phone number
+admin.users.user.status=Status
+admin.users.user.role=Role
+
+
 
 
