fixed localization at display_users.jsp

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -148,12 +148,31 @@ librarian.orders.already.status=Change Status
 
 admin.users.user.id=User Id
 admin.users.user.login=Login
-admin.users.user.first_name=First name
-admin.users.user.second_name=Second name
+admin.users.user.name=User name
 admin.users.user.email=Email
 admin.users.user.phone=Phone number
 admin.users.user.status=Status
 admin.users.user.role=Role
+admin.users.user.change.role=Change Role
+
+
+admin.users.action.unban=UNBLOCK
+admin.users.action.ban=BLOCK
+
+admin.user.msg.banned=BLOCKED
+admin.user.msg.not.banned=NORMAL
+
+admin.users.action.lib=Set to Librarian
+admin.users.action.user=Set to User
+admin.users.msg.librarian=Librarian
+admin.users.msg.user = User
+
+admin.user.msg.unban.first=Unblock to set role
+admin.user.msg.unsupported=Forbidden
+admin.user.users.title=Users List
+admin.user.reader.title=Readers List
+
+
 
 
 
