--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -134,3 +134,29 @@ librarian.orders.already.returned=ПОВЕРНЕНО
 
 admin.orders.orders.title=Замовлення Користувачів
 librarian.orders.already.status=Змінити Статус
+
+admin.users.user.id=ID Користувача
+admin.users.user.login=Логін
+admin.users.user.name=Ім'я
+admin.users.user.email=Електронна пошта
+admin.users.user.phone=Номер телефону
+admin.users.user.status=Статус
+admin.users.user.role=Роль
+admin.users.user.change.role=Змінити роль
+
+
+admin.users.action.unban=РАЗБЛОКУВАТИ
+admin.users.action.ban=ЗАБЛОКУВАТИ
+
+admin.user.msg.banned=ЗАБЛОКОВАНИЙ
+admin.user.msg.not.banned=НОРМАЛЬНИЙ
+
+admin.users.action.lib=Назначити Бібліотекарем
+admin.users.action.user=Назначити Користувачем
+admin.users.msg.librarian=Біліотекар
+admin.users.msg.user=Користувач
+
+admin.user.msg.unban.first=Разблокуйте для зміни ролі!
+admin.user.msg.unsupported=Заборонено
+admin.user.users.title=Список користувачів
+admin.user.reader.title=Список Читачів
