--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -36,7 +36,7 @@ header.common.logout=Вийти
 
 header.user.order=Мої замовлення
 
-header.admin.librarians=Бібліотекарі
+header.admin.readers=Читачі
 header.admin.users=Користувачі
 header.admin.orders=Замовлення користувачів
 
