added profile page + localization

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -19,13 +19,17 @@ registrationForm.login_already_exists=User with such login already exists
 registrationForm.email_already_exists=User with such email already exists
 registrationForm.phone_already_exists=User with such phone number already exists
 
+common.profile.login=Login
+common.profile.role=Role
+common.profile.status=Status
+common.profile.email=Email
+common.profile.phone=Phone Number
+common.profile.first.name=First Name
+common.profile.second.name=Second Name
 
 commonForm.username=Username
 commonForm.password=Password
 
-
-
-header.common.authors=Authors
 header.common.books=Books
 
 header.common.home=Home
