added localization to search_by

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -37,7 +37,8 @@ header.common.search=Search..
 header.common.profile=My profile
 header.common.login=Log in
 header.common.logout=Log out
-
+header.common.search.by.title=By Title
+header.common.search.by.author=By Author
 
 header.user.order=My orders
 
