--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -4,7 +4,8 @@ loginForm.btn.continue=Продовжити
 loginForm.btn.createAccount=Ще не має аккаунту? Створити аккаунт
 loginForm.msg.loginError=Неправильний логін/пароль
 loginForm.msg.userIsBlocked=Користувач заблокований!
-
+header.common.search.by.title=По Назві
+header.common.search.by.author=По Автору
 
 registrationForm.registration=Створити Аккаунт
 registrationForm.email=Електронна пошта
