added content to unsupported operation error page

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -109,6 +109,10 @@ error.common.not.authorized.title=You are not authorized.
 error.common.not.authorized.description=You tried to access a page you did not have prior authorization for.
 error.common.wrong.page=Oops, something went wrong... Looks like this page doesn't exist
 
+
+error.common.unsupported.operation.title=Unsupported operation.
+error.common.unsupported.operation.description=The operation you are trying to do is unsupported.
+
 books.common.unavailable = Unavailable
 
 
