added icon to all pages

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,3 +1,6 @@
+common.label.library.title=LIBRARY
+common.label.creator=By Oleksii Horobets
+
 loginForm.login=Login
 loginForm.btn.continue=Continue
 loginForm.btn.createAccount=Don't have an account? Create account
@@ -29,6 +32,8 @@ common.profile.second.name=Second Name
 
 commonForm.username=Username
 commonForm.password=Password
+
+
 
 header.common.books=Books
 
