--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -1,4 +1,6 @@
-#TODO: Translate to ukr commented strings are already translated
+common.label.library.title=БІБЛІОТЕКА
+common.label.creator=Розробив Олексій Горобець
+
 loginForm.login=Логін
 loginForm.btn.continue=Продовжити
 loginForm.btn.createAccount=Ще не має аккаунту? Створити аккаунт
