--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -118,6 +118,13 @@ error.common.wrong.page=Oops, something went wrong... Looks like this page doesn
 error.common.unsupported.operation.title=Unsupported operation.
 error.common.unsupported.operation.description=The operation you are trying to do is unsupported.
 
+
+error.common.internal.error.title=Oops, something went wrong!
+error.common.internal.error.description=The error appeared on the server side!
+
+
+
+
 books.common.unavailable = Unavailable
 
 
