--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -149,7 +149,7 @@ librarian.orders.already.returned=ПОВЕРНЕНО
 
 
 admin.orders.orders.title=Замовлення Користувачів
-librarian.orders.already.status=Змінити Статус
+librarian.orders.label.return=Повернути
 
 admin.users.user.id=ID Користувача
 admin.users.user.login=Логін
