--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -158,6 +158,12 @@ orders.common.order.place=Order Place
 orders.common.order.subscription=On Subscription
 orders.common.order.in.reading.hall=To the reading room
 
+orders.common.status= Status
+orders.common.status.processing= Processing
+orders.common.status.canceled= Canceled
+orders.common.status.accepted= Accepted
+
+
 orders.common.not.returned=Not returned
 orders.common.returned.overdue=Overdue
 
