--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -141,6 +141,13 @@ orders.common.order.place=Місце замовлення
 orders.common.order.subscription=На підписку
 orders.common.order.in.reading.hall=До читального залу
 
+orders.common.status= Статус
+orders.common.status.processing= Обробляється
+orders.common.status.canceled= Відхилено
+orders.common.status.accepted= Прийнято
+
+
+
 orders.common.not.returned=Не повернено
 orders.common.returned.overdue=Прострочено
 
