added users requests to header

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -46,10 +46,12 @@ header.common.search.by.title=By Title
 header.common.search.by.author=By Author
 
 header.user.order=My orders
+header.user.requested.orders=Requested orders
 
 header.admin.readers=Readers
 header.admin.users=Users
 header.admin.orders=User's orders
+header.admin.requested.orders=User's requests
 
 header.language.en=EN
 header.language.ua=UA
