--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -50,10 +50,14 @@ header.common.logout=Вийти
 
 
 header.user.order=Мої замовлення
+header.user.requested.orders=Мої заявки
 
 header.admin.readers=Читачі
 header.admin.users=Користувачі
 header.admin.orders=Замовлення користувачів
+header.admin.requested.orders=Заявки користувачів
+
+
 
 header.language.en=Анг
 header.language.ua=Укр
