added cancel and accept links to users_requests.jsp

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -165,6 +165,8 @@ orders.common.status.processing= Processing
 orders.common.status.canceled= Canceled
 orders.common.status.accepted= Accepted
 
+orders.common.action.cancel=CANCEL
+orders.common.action.accept=ACCEPT
 
 orders.common.not.returned=Not returned
 orders.common.returned.overdue=Overdue
