--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -149,7 +149,8 @@ orders.common.status= Статус
 orders.common.status.processing= Обробляється
 orders.common.status.canceled= Відхилено
 orders.common.status.accepted= Прийнято
-
+orders.common.action.cancel=ВІДХИЛИТИ
+orders.common.action.accept=ПРИЙНЯТИ
 
 
 orders.common.not.returned=Не повернено
