--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -111,6 +111,8 @@ admin.books.edit.form.validation.msg.name=Name should contain no more than 50 le
 
 #TODO: add to ua
 admin.orders.orders.title=User Orders
+admin.orders.requests.title=User Requests
+my.orders.requests.title=My Requests
 
 error.common.not.authorized.title=You are not authorized.
 error.common.not.authorized.description=You tried to access a page you did not have prior authorization for.
@@ -166,6 +168,7 @@ orders.common.status.canceled= Canceled
 orders.common.status.accepted= Accepted
 
 orders.common.action.cancel=CANCEL
+orders.common.action.decline=DECLINE
 orders.common.action.accept=ACCEPT
 
 orders.common.not.returned=Not returned
