added translation to unsupported command

--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -154,6 +154,10 @@ orders.common.action.decline=ВІДХИЛИТИ
 orders.common.action.accept=ПРИЙНЯТИ
 
 
+error.common.unsupported.operation.title=Операція не підтримується.
+error.common.unsupported.operation.description=Операція, яку ви намагаетесь виконати не підтримується.
+
+
 orders.common.not.returned=Не повернено
 orders.common.returned.overdue=Прострочено
 
