--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -116,7 +116,9 @@ my.orders.requests.title=My Requests
 
 error.common.not.authorized.title=You are not authorized.
 error.common.not.authorized.description=You tried to access a page you did not have prior authorization for.
-error.common.wrong.page=Oops, something went wrong... Looks like this page doesn't exist
+
+error.common.wrong.page.title=Oops, something went wrong...
+error.common.wrong.page.description = Looks like this page doesn't exist
 
 
 error.common.unsupported.operation.title=Unsupported operation.
