changed orders.title and requests.title

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -110,8 +110,8 @@ admin.books.edit.form.validation.msg.name=Name should contain no more than 50 le
 
 
 #TODO: add to ua
-admin.orders.orders.title=User Orders
-admin.orders.requests.title=User Requests
+admin.orders.orders.title=User's Orders
+admin.orders.requests.title=User's Requests
 my.orders.requests.title=My Requests
 
 error.common.not.authorized.title=You are not authorized.
@@ -166,7 +166,7 @@ orders.common.order.in.reading.hall=To the reading room
 
 orders.common.status= Status
 orders.common.status.processing= Processing
-orders.common.status.canceled= Canceled
+orders.common.status.rejected= Rejected
 orders.common.status.accepted= Accepted
 
 orders.common.action.cancel=CANCEL
