--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -150,7 +150,7 @@ orders.common.order.in.reading.hall=До читального залу
 
 orders.common.status= Статус
 orders.common.status.processing= Обробляється
-orders.common.status.canceled= Відхилено
+orders.common.status.rejected=Відхилено
 orders.common.status.accepted= Прийнято
 orders.common.action.cancel=ВІДМІНИТИ
 orders.common.action.decline=ВІДХИЛИТИ
